--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -36,26 +36,39 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v5
         with:
-          fetch-depth: 0 # 如果未启用 lastUpdated，则不需要
-      # - uses: pnpm/action-setup@v4 # 如果使用 pnpm，请取消此区域注释
-      #   with:
-      #     version: 9
-      # - uses: oven-sh/setup-bun@v1 # 如果使用 Bun，请取消注释
+          fetch-depth: 0
+
       - name: Setup Node
         uses: actions/setup-node@v6
         with:
-          node-version: 24
-          cache: npm # 或 pnpm / yarn
+          node-version: '22'
+
       - name: Setup Pages
         uses: actions/configure-pages@v4
+
       - name: Install dependencies
-        run: npm ci # 或 pnpm install / yarn install / bun install
+        run: |
+          cd docs
+          echo "Check current directory"
+          pwd
+          npm ci
+
       - name: Build with VitePress
-        run: npm run docs:build # 或 pnpm docs:build / yarn docs:build / bun run docs:build
+        run: |
+          cd docs
+          echo "Check current directory"
+          pwd
+          npm run docs:build
+          
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: docs/.vitepress/dist
+          path: docs/.vitepress/dist # 编译产物路径
+      - name: Check artifact
+        run: |
+          echo "Check artifact"
+          pwd
+          ls -al docs/.vitepress/dist
 
   # 部署工作
   deploy:
@@ -69,3 +82,5 @@ jobs:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
+        with:
+          path: docs/.vitepress/dist
